# VitaShell

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Korean.txt  Makefile  README.md  UI2.c  UI2.h  VitaShell.elf  VitaShell.velf  VitaShell_warning.vpk  adhoc_dialog.c  adhoc_dialog.h  archive.c  archive.h  archiveRAR.c  archiveRAR.h  audioplayer.c  audioplayer.h  bm.c  bm.h  browser.c  browser.h  bulgarian_bg.txt  chinese_s.txt  chinese_t.txt  config.c  config.h  context_menu.c  context_menu.h  contributors.txt  coredump.c  coredump.h  danish.txt  dutch.txt  elf.c  elf.h  elf_types.h  english_us.txt  file.c  (+101 more)
VitaShellUpdater/: Makefile
audio/: id3.c  id3.h  info.h  lrcparse.c  lrcparse.h  mp3player.c  mp3player.h  mp3xing.c  mp3xing.h  oggplayer.c  oggplayer.h  player.c  player.h  vita_audio.c  vita_audio.h
db/: licenses.db  readme.txt
extra/: RW.json
fex/7z_C/: readme.txt
fex/fex/: blargg_common.h  blargg_config.h
fex/unrar/: changes.txt  technote.txt  whatsnew.txt
l10n/: bulgarian.txt  catalan.txt  chinese_s.txt  chinese_t.txt  danish.txt  english_us.txt  french.txt  german.txt  hungarian.txt  italian.txt  japanese.txt  korean.txt  norwegian.txt  portuguese.txt  portuguese_br.txt  russian.txt  spanish.txt  swedish.txt  turkish.txt
libmad/: libmad_config.h
libpromoter/: CMakeLists.txt  Makefile  promoterutil.h  promoterutil.json
minizip/: ioapi.c
modules/kernel/: CMakeLists.txt  exports.yml  main.c  vitashell_kernel.h
modules/patch/: CMakeLists.txt  exports.yml  main.c
modules/usbdevice/: CMakeLists.txt  exports.yml  main.c
modules/user/: CMakeLists.txt  exports.yml  main.c  vitashell_user.h
payload/: Makefile  linker.x  main.c  payload
pkg/sce_sys/livearea/contents/: template.xml
pkg/sce_sys/manual/src/: template.html
psp/: binary.h  headers.h  icon0.h  pboot.c  pboot.h
psp/libkirk/: Makefile  amctrl.c  amctrl.h  bn.c  crypto.c  crypto.h  ec.c  ecdsa.h  kirk_engine.c  kirk_engine.h  psp_headers.h
psp2link/: commands.c  psp2link.c  psp2link.h  psp2link_internal.h  requests.c
release/: VitaShell.vpk  changelog.txt  param.sfo  template.xml  translation_readme.txt
resources/: base_head_bin.h  battery.h  battery_bar_green.h  battery_bar_red.h  build.bat  changeinfo.txt  chinese_s.txt  colors.txt  english_us.txt  english_us_translation.h  english_us_translation.txt  kernel.skprx  patch.skprx  russian.txt  spanish.txt  theme.txt  umass.skprx  usbdevice.skprx  user.suprx
resources/default/: colors.txt
resources/electron/: colors.txt  font.pgf
unrarlib/: unrar_c_wrapper.h  unrarlibutils.c  unrarlibutils.h
updater/: Makefile  main.c
usbdevice/: CMakeLists.txt  exports.yml  main.c
